[package]
name = "mlat-client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["cargo", "derive", "env"] }
crc = "3.0.1"
ctrlc = "3.4.1"
env_logger = "0.10.1"
hex = "0.4.3"
hex-slice = "0.1.4"
io = "0.0.2"
log = "0.4.20"
rustc-serialize = "0.3.24"
stdio = "0.1.0"
tokio = { version = "1.34.0", features = ["full"] }
#"libbeast" = {path = "./libbeast"}
futures = "0.3.29"
